--- a/voice-rive.html
+++ b/voice-rive.html
@@ -10,30 +10,33 @@
 </head>
 <body>
   <canvas id="riveCanvas"></canvas>
-  <script type="module">
-    import { Rive } from "https://unpkg.com/@rive-app/webgl@latest/dist/rive.js";
 
+  <!-- Правильное подключение библиотеки -->
+  <script src="https://unpkg.com/@rive-app/webgl@latest/dist/umd/rive.min.js"></script>
+
+  <script>
     const canvas = document.getElementById("riveCanvas");
 
-    const response = await fetch("voice-animation.riv");
-    const buffer = await response.arrayBuffer();
+    fetch("voice-animation.riv")
+      .then(response => response.arrayBuffer())
+      .then(buffer => {
+        const rive = new rive.Rive({
+          canvas,
+          buffer,
+          autoplay: true,
+          onLoad: () => {
+            const viewModel = rive.data?.viewModels?.[0];
+            const volumeInput = viewModel?.inputs?.find(i => i.name === "volume");
 
-    const rive = new Rive({
-      canvas,
-      buffer,
-      autoplay: true,
-      onLoad: () => {
-        const viewModel = rive.data?.viewModels?.[0];
-        const volumeInput = viewModel?.inputs?.find(i => i.name === "volume");
-
-        window.addEventListener("message", (event) => {
-          const { type, key, value } = event.data?.pluginMessage || {};
-          if (type === "rive-data" && key === "volume" && volumeInput) {
-            volumeInput.value = value;
+            window.addEventListener("message", (event) => {
+              const { type, key, value } = event.data?.pluginMessage || {};
+              if (type === "rive-data" && key === "volume" && volumeInput) {
+                volumeInput.value = value;
+              }
+            });
           }
         });
-      }
-    });
+      });
   </script>
 </body>
 </html>
