--- a/voice-rive.html
+++ b/voice-rive.html
@@ -1,43 +1,74 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Voice Rive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Voice Reactive Rive</title>
   <style>
-    html, body { margin: 0; padding: 0; background: transparent; }
-    canvas { width: 100vw; height: 100vh; display: block; }
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: black;
+      height: 100%;
+      width: 100%;
+    }
+    canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
   <canvas id="riveCanvas"></canvas>
 
-  <!-- Подключение локального rive.min.js -->
-  <script src="./rive.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@rive-app/webgl@1.0.88/rive.min.js"></script>
   <script>
-    const canvas = document.getElementById("riveCanvas");
+    async function start() {
+      const canvas = document.getElementById("riveCanvas");
 
-    fetch("voice-animation.riv")
-      .then(response => response.arrayBuffer())
-      .then(buffer => {
-        const riveInstance = new rive.Rive({
-          canvas,
-          buffer,
-          autoplay: true,
-          onLoad: () => {
-            const viewModel = riveInstance.data?.viewModels?.[0];
-            const volumeInput = viewModel?.inputs?.find(i => i.name === "volume");
+      const riveInstance = new rive.Rive({
+        canvas,
+        src: "voice-animation.riv", // <-- сюда укажешь свой .riv файл
+        autoplay: true,
+        stateMachines: "State Machine", // Имя стейт-машины, если она есть
+        onLoad: () => {
+          console.log("Rive loaded!");
 
-            window.addEventListener("message", (event) => {
-              const { type, key, value } = event.data?.pluginMessage || {};
-              if (type === "rive-data" && key === "volume" && volumeInput) {
-                volumeInput.value = value;
+          navigator.mediaDevices.getUserMedia({ audio: true })
+            .then(stream => {
+              const audioCtx = new AudioContext();
+              const source = audioCtx.createMediaStreamSource(stream);
+              const analyser = audioCtx.createAnalyser();
+              analyser.fftSize = 256;
+              const dataArray = new Uint8Array(analyser.frequencyBinCount);
+
+              function updateVolume() {
+                analyser.getByteFrequencyData(dataArray);
+                const avg = dataArray.reduce((a, b) => a + b, 0) / dataArray.length;
+                const volume = Math.min(60, Math.max(0, avg / 2));
+
+                // Отправляем громкость в Rive через Input
+                const inputs = riveInstance.stateMachineInputs("State Machine 1");
+                const volumeInput = inputs.find(input => input.name === "volume");
+                if (volumeInput) {
+                  volumeInput.value = volume;
+                }
+
+                requestAnimationFrame(updateVolume);
               }
+
+              updateVolume();
+            })
+            .catch(err => {
+              console.error('Microphone access denied:', err);
             });
-          }
-        });
+        },
       });
+    }
+
+    start();
   </script>
 </body>
 </html>
