--- a/voice-rive.html
+++ b/voice-rive.html
@@ -12,27 +12,54 @@
       background: black;
       height: 100%;
       width: 100%;
+      position: relative;
     }
     canvas {
       display: block;
       width: 100%;
       height: 100%;
     }
+    #startButton {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 24px;
+      font-size: 18px;
+      background: #6200ea;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      z-index: 10;
+    }
+    #startButton:hover {
+      background: #3700b3;
+    }
   </style>
 </head>
 <body>
   <canvas id="riveCanvas"></canvas>
+  <button id="startButton">🎤 Начать запись</button>
 
-  <script src="https://cdn.jsdelivr.net/npm/@rive-app/webgl@1.0.88/rive.min.js"></script>
+  <script src="https://unpkg.com/@rive-app/webgl@1.0.75/dist/rive.min.js"></script>
+
   <script>
+    const startButton = document.getElementById("startButton");
+
+    startButton.addEventListener("click", () => {
+      startButton.style.display = "none"; // Скрываем кнопку после нажатия
+      start();
+    });
+
     async function start() {
       const canvas = document.getElementById("riveCanvas");
 
       const riveInstance = new rive.Rive({
         canvas,
-        src: "voice-animation.riv", // <-- сюда укажешь свой .riv файл
+        src: "voice-animation.riv",
         autoplay: true,
-        stateMachines: "State Machine", // <-- исправлено! имя без "1"
+        stateMachines: "State Machine",
         onLoad: () => {
           console.log("Rive loaded!");
 
@@ -40,35 +67,3 @@
             .then(stream => {
               const audioCtx = new AudioContext();
               const source = audioCtx.createMediaStreamSource(stream);
-              const analyser = audioCtx.createAnalyser();
-              analyser.fftSize = 256;
-              const dataArray = new Uint8Array(analyser.frequencyBinCount);
-
-              function updateVolume() {
-                analyser.getByteFrequencyData(dataArray);
-                const avg = dataArray.reduce((a, b) => a + b, 0) / dataArray.length;
-                const volume = Math.min(60, Math.max(0, avg / 2));
-
-                // Отправляем громкость в Rive через Input
-                const inputs = riveInstance.stateMachineInputs("State Machine"); // <-- исправлено!
-                const volumeInput = inputs.find(input => input.name === "volume");
-                if (volumeInput) {
-                  volumeInput.value = volume;
-                }
-
-                requestAnimationFrame(updateVolume);
-              }
-
-              updateVolume();
-            })
-            .catch(err => {
-              console.error('Microphone access denied:', err);
-            });
-        },
-      });
-    }
-
-    start();
-  </script>
-</body>
-</html>
