--- a/voice-rive.html
+++ b/voice-rive.html
@@ -12,58 +12,82 @@
       background: black;
       height: 100%;
       width: 100%;
-      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
     canvas {
-      display: block;
-      width: 100%;
-      height: 100%;
+      width: 400px;
+      height: 400px;
+      background: transparent;
     }
-    #startButton {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 24px;
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
       font-size: 18px;
-      background: #6200ea;
-      color: white;
-      border: none;
-      border-radius: 8px;
       cursor: pointer;
-      z-index: 10;
-    }
-    #startButton:hover {
-      background: #3700b3;
     }
   </style>
 </head>
 <body>
-  <canvas id="riveCanvas"></canvas>
-  <button id="startButton">🎤 Начать запись</button>
 
-  <script src="https://unpkg.com/@rive-app/webgl@1.0.75/dist/rive.min.js"></script>
+<canvas id="riveCanvas"></canvas>
+<button id="startButton">Начать запись</button>
 
-  <script>
-    const startButton = document.getElementById("startButton");
+<script src="https://unpkg.com/@rive-app/webgl@1.0.75/dist/rive.min.js"></script>
+<script>
+  const startButton = document.getElementById("startButton");
 
-    startButton.addEventListener("click", () => {
-      startButton.style.display = "none"; // Скрываем кнопку после нажатия
-      start();
+  startButton.addEventListener("click", () => {
+    startButton.style.display = "none";
+    start();
+  });
+
+  async function start() {
+    const canvas = document.getElementById("riveCanvas");
+
+    const riveInstance = new rive.Rive({
+      canvas,
+      src: "voice-animation.riv",
+      autoplay: true,
+      onLoad: () => {
+        console.log("✅ Rive загружен");
+
+        navigator.mediaDevices.getUserMedia({ audio: true })
+          .then(stream => {
+            console.log("✅ Микрофон доступ получен");
+
+            const audioCtx = new AudioContext();
+            const source = audioCtx.createMediaStreamSource(stream);
+            const analyser = audioCtx.createAnalyser();
+            analyser.fftSize = 256;
+            const dataArray = new Uint8Array(analyser.frequencyBinCount);
+
+            function updateVolume() {
+              analyser.getByteFrequencyData(dataArray);
+              const avg = dataArray.reduce((a, b) => a + b, 0) / dataArray.length;
+              const volume = Math.min(60, Math.max(0, avg / 2));
+
+              const viewModel = riveInstance.data?.viewModels?.find(vm => vm.name === "VoiceModel");
+              const volumeInput = viewModel?.inputs?.find(input => input.name === "volume");
+
+              if (volumeInput) {
+                volumeInput.value = volume;
+              }
+
+              requestAnimationFrame(updateVolume);
+            }
+
+            updateVolume();
+          })
+          .catch(err => {
+            console.error('🚫 Доступ к микрофону запрещён:', err);
+          });
+      },
     });
+  }
+</script>
 
-    async function start() {
-      const canvas = document.getElementById("riveCanvas");
-
-      const riveInstance = new rive.Rive({
-        canvas,
-        src: "voice-animation.riv",
-        autoplay: true,
-        stateMachines: "State Machine",
-        onLoad: () => {
-          console.log("Rive loaded!");
-
-          navigator.mediaDevices.getUserMedia({ audio: true })
-            .then(stream => {
-              const audioCtx = new AudioContext();
-              const source = audioCtx.createMediaStreamSource(stream);
+</body>
+</html>
